[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trip-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "config*", "logger*", "exception*", "prompt_library*"]
exclude = ["notebook*"]
